--- a/styles.css
+++ b/styles.css
@@ -585,3 +585,35 @@ section.visible {
         transform: rotate(360deg);
     }
 }
+
+/* Style pour le bouton de basculement des sons */
+#sound-toggle {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 1.5em;
+    color: var(--dark-green);
+    background-color: var(--primary);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s, transform 0.3s;
+    margin-left: 10px;
+}
+
+#sound-toggle:hover {
+    transform: scale(1.1);
+    background-color: var(--dark-green);
+    color: var(--primary);
+}
+
+#sound-toggle:focus {
+    outline: none;
+}
+
+#sound-toggle.sound-off {
+    color: #ccc;
+}
